# software-is-art

./: .buckconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: edge-release.yml
crates/infra/datastar-edge-worker/: BUCK  Cargo.toml  wrangler.toml
crates/infra/datastar-edge-worker/src/: lib.rs
crates/infra/datastar-edge-worker/templates/: index.html
crates/infra/datastar-edge-worker/tests/: sse.rs
infra/cloudflare/: dns.tf
tools/: ci.bxl  domains.json  domains.schema.json  release.bxl
tools/wrangler/: ensure_triggers.ts
workers/api/: BUILD.bzl  TARGETS  wrangler.jsonc
