[package]
name = "datastar-edge-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6.1"
datastar = "0.3.1"
async-stream = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
